# TestCooler

./: CMakeLists.txt  README.md  main.cpp
include/: Camera.h  DisplayWindow.h  FBO.h  GraphicsConfig.h  GraphicsExport.h  GraphicsInterface.h  ICallBack.h  Scene.h  Shader.h  SkinnedMesh.h  Texture.h  TweakBar.h
src/: Camera.cpp  CameraManager.cpp  DisplayWindow.cpp  Effect.cpp  EffectManager.cpp  EventLogger.cpp  FBO.cpp  FBOManager.cpp  GraphicsConfig.cpp  GraphicsInterface.cpp  ICallBack.cpp  InputTransformer.cpp  Model.cpp  ModelManager.cpp  OutputTarget.cpp  OutputToFile.cpp  OutputToScreen.cpp  ProductFactoryData.cpp  Render.cpp  Resource.cpp  ResourceExplorer.cpp  ResourceManager.cpp  SOIL.c  Scene.cpp  Shader.cpp  SkinnedMesh.cpp  Texture.cpp  TextureManager.cpp  TweakBar.cpp  XmlParser.cpp  stb_image_aug.c
